--- a/style.css
+++ b/style.css
@@ -14,6 +14,9 @@ body{
     background-position: center;
     background-size: cover;
 }
+.game-title{
+    display: none;
+}
 .canvas-asset{
     display: none;
 }
@@ -26,13 +29,11 @@ body{
 -moz-box-shadow: 0 10px 131px 24px rgba(255, 255, 255, 0.75);
 }
 .control-window-container,.winning-window-container{
+    display: none;
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%,-50%);
-}
-.winning-window-container{
-    display: none;
 }
 .control-window-container,.winning-window-container{
     position: absolute;
