--- a/style.css
+++ b/style.css
@@ -9,12 +9,9 @@ body{
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background: url('img/background.jpg');
+    background: url('img/background.svg');
     background-position: center;
-    background-size: cover;
-}
-.game-title{
-    display: none;
+    background-size: contain;
 }
 .canvas-asset{
     display: none;
@@ -40,9 +37,9 @@ body{
     position: absolute;
     z-index: 10;
     transition: 1s;
-    top: 50%;
+    top: 60%;
     left: 50%;
-    transform: translate(-50%,-50%);
+    transform: scale(.9) translate(-55%,-50%);
 }
 #close-button, #play-again-button,#play-game-button{
     position: absolute;
@@ -65,4 +62,10 @@ body{
 #play-again-button:hover,#play-game-button:hover{
     box-shadow: 0 0 13px 5px rgba(96, 53, 26, 0.75);
     transition: .3s;
+}
+
+@media all and (max-width: 1440px){
+    .control-window-container,.winning-window-container,.play-game-container{
+        transform: scale(.6) translate(-82.5%,-85%);
+    }
 }
